@@ -235,6 +235,7 @@ init_desc(void) {
 	SET_NSSTATDESC(sitnomatch, "source identity token - no match",
 		       "SitNoMatch");
 	SET_NSSTATDESC(sitmatch, "source identity token - match", "SitMatch");
+	SET_NSSTATDESC(keytagopt, "Keytag option received", "KeyTagOpt");
 	INSIST(i == dns_nsstatscounter_max);
 
 	/* Initialize resolver statistics */
