@@ -1,3 +1,8 @@
+4759.	[func]		Add logging channel "trust-anchor-telementry" to
+			record trust-anchor-telementry in incoming requests.
+			Both _ta-XXXX.<anchor>/NULL and EDNS KEY-TAG options
+			are logged.  [RT #46124]
+
 4758.	[doc]		Remove documentation of unimplemented "topology".
 			[RT #46161]
 
